--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
+    "apollo-boost": "^0.4.9",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "dompurify": "^2.3.1",
+    "graphql": "^14.7.0",
     "install": "^0.13.0",
     "jodit-react": "^1.1.1",
     "jsdom": "^16.7.0",
@@ -25,6 +27,7 @@
     "passport-google-oauth20": "^2.0.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
